--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "tslib": "^2.4.1",
-    "ws": "^8.12.0"
+    "ws": "^8.12.0",
+    "zlib": "^1.0.5"
   }
 }
