--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
 	"compilerOptions": {
-		// Type Checking
 		"allowUnreachableCode": false,
 		"allowUnusedLabels": false,
 		"exactOptionalPropertyTypes": true,
@@ -12,40 +11,19 @@
 		"strict": true,
 		"useUnknownInCatchVariables": true,
 		"noUncheckedIndexedAccess": true,
-
 		// Modules
 		"module": "CommonJS",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
-
 		// Emit
-		"declaration": true,
-		"declarationMap": false,
-		"importHelpers": true,
-		"importsNotUsedAsValues": "preserve",
-		"inlineSources": true,
-		"newLine": "lf",
-		"noEmitHelpers": true,
-		"outDir": "dist",
-		"preserveConstEnums": true,
-		"removeComments": false,
-		"sourceMap": true,
 		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-
 		// Language and Environment
-		"emitDecoratorMetadata": true,
-		"experimentalDecorators": true,
-		"lib": ["ESNext"],
+		"lib": [
+			"ESNext"
+		],
 		"target": "ES2022",
-		"useDefineForClassFields": true,
-        "allowJs": true,
 	},
-    "exclude": [
-        ".github",
-        "node_modules",
-        "dist",
-		"tests",
-		"lib/__tests__"
-    ]
+	"include": [
+		"src/**/*"
+	]
 }
