--- a/package.json
+++ b/package.json
@@ -1,62 +1,46 @@
 {
   "name": "@kastelll/packages",
-  "version": "2.0.0",
-  "description": "Kastels Util packages",
+  "version": "1.2.0",
+  "description": "These are just some utils for kastelll",
   "main": "dist/index.js",
-  "types": "dist/types/index.d.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "postinstall": "husky install",
-    "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable",
-    "build": "npm run build:cjs && npm run build:types",
-    "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
-    "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
-    "build:types": "node tools/cleanup types && tsc -p config/tsconfig.types.json",
-    "clean": "node tools/cleanup",
-    "package": "npm run build && npm pack",
-    "test": "jest --no-cache --runInBand",
-    "test:cov": "jest --coverage --no-cache --runInBand"
+    "test": "jest --config jestconfig.json",
+    "build": "tsc",
+    "format": "prettier --write \"lib/**/*.ts\"",
+    "lint": "eslint \"lib/**/*.ts\"",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A lib",
+    "postversion": "git push && git push --tags"
   },
-  "publishConfig": {
-    "access": "public"
-  },
+  "author": "DarkerInk",
+  "license": "ISC",
+  "repository": "https://github.com/kastelll/packages.git",
   "files": [
-    "dist"
+    "dist/**/*"
   ],
-  "keywords": [],
-  "author": "Kastelll",
-  "homepage": "https://github.com/Kastelll/packages",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:kastelll/packages.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Kastelll/packages/issues"
+  "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.5",
+    "@types/ws": "^8.5.4",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jsdoc": "^39.6.4",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.31.11",
+    "jest": "^29.3.1",
+    "prettier": "^2.8.2",
+    "ts-jest": "^29.0.3",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ws": "^8.12.0"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
-    "@types/express": "^4.17.16",
-    "@types/jest": "^29.4.0",
-    "@types/ws": "^8.5.4",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.3",
-    "jest": "^29.4.1",
-    "pinst": "^3.0.0",
-    "prettier": "^2.8.3",
-    "ts-jest": "^29.0.5",
-    "ts-loader": "^9.4.2",
-    "typescript": "^4.9.4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-node-externals": "^3.0.0"
+    "ws": "^8.12.0",
+    "zlib": "^1.0.5"
   }
 }
