--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"lint-staged": "^13.2.1",
 		"node-gyp": "^9.3.1",
 		"tsup": "^6.7.0",
-		"turbo": "^1.9.1",
+		"turbo": "latest",
 		"typescript": "^5.0.4",
 		"unocss": "^0.51.4",
 		"vercel": "^28.18.5",
