fix: fixing namings

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,7 @@
 enableGlobalCache: true
 nodeLinker: node-modules
+npmRegistryServer: 'https://registry.npmjs.org'
+npmScopes:
+  kastelll:
+    npmAlwaysAuth: true
+    npmRegistryServer: 'https://registry.npmjs.org'
