--- a/packages/wrapper/package.json
+++ b/packages/wrapper/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@kastelll/util",
-	"version": "0.1.3",
-	"description": "These are just some utils for Kastel, stuff like Snowflake stuff etc",
+	"name": "@kastelll/wrapper",
+	"version": "0.1.0",
+	"description": "This is a API & WS Wrapper for Kastel, Handles almost everything",
 	"license": "GPL-3.0-or-later",
 	"keywords": [],
 	"repository": {
