--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@kastelll/util",
-	"version": "0.1.3",
+	"version": "0.1.6",
 	"description": "These are just some utils for Kastel, stuff like Snowflake stuff etc",
 	"license": "GPL-3.0-or-later",
 	"keywords": [],
@@ -43,7 +43,7 @@
 	],
 	"devDependencies": {
 		"@favware/cliff-jumper": "^1.10.0",
-		"@types/node": "16.18.11",
+		"@types/node": "^18.16.2",
 		"@vitest/coverage-c8": "^0.27.1",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.31.0",
@@ -53,5 +53,9 @@
 		"tsup": "^6.5.0",
 		"typescript": "^4.9.4",
 		"vitest": "^0.27.1"
+	},
+	"dependencies": {
+		"@kastelll/internal": "latest",
+		"ioredis": "^5.3.2"
 	}
 }
