--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@kastelll/util",
-	"version": "0.1.6",
+	"version": "0.2.0",
 	"description": "These are just some utils for Kastel, stuff like Snowflake stuff etc",
 	"license": "GPL-3.0-or-later",
 	"keywords": [],
@@ -56,6 +56,7 @@
 	},
 	"dependencies": {
 		"@kastelll/internal": "latest",
-		"ioredis": "^5.3.2"
+		"ioredis": "^5.3.2",
+		"undici": "^5.22.0"
 	}
 }
