--- a/packages/wrapper/package.json
+++ b/packages/wrapper/package.json
@@ -42,6 +42,7 @@
 		}
 	],
 	"devDependencies": {
+		"@types/pako": "^2.0.0",
 		"@favware/cliff-jumper": "^1.10.0",
 		"@types/node": "16.18.11",
 		"@vitest/coverage-c8": "^0.27.1",
@@ -53,5 +54,8 @@
 		"tsup": "^6.5.0",
 		"typescript": "^4.9.4",
 		"vitest": "^0.27.1"
+	},
+	"dependencies": {
+		"pako": "^2.1.0"
 	}
 }
