--- a/packages/wrapper/package.json
+++ b/packages/wrapper/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@kastelll/wrapper",
-	"version": "0.1.1",
+	"version": "0.1.4",
 	"description": "This is a API & WS Wrapper for Kastel, Handles almost everything",
 	"license": "GPL-3.0-or-later",
 	"keywords": [],
@@ -56,6 +56,7 @@
 		"vitest": "^0.27.1"
 	},
 	"dependencies": {
+		"events": "^3.3.0",
 		"pako": "^2.1.0"
 	}
 }
