refactor(wrapper): refactoring some wrapper stuff

--- a/packages/wrapper/.eslintrc.json
+++ b/packages/wrapper/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-	"extends": "../../.eslintrc.json"
+	"extends": "../../.eslintrc.json",
+	"rules": {
+		"promise/prefer-await-to-then": "off",
+		"promise/prefer-await-to-callbacks": "off"
+	}
 }
