--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"node-gyp": "^9.3.1",
 		"tsup": "^6.7.0",
 		"turbo": "latest",
+		"typedoc": "^0.24.8",
 		"typescript": "^5.0.4",
 		"vitest": "^0.29.8"
 	},
