--- a/packages/wrapper/package.json
+++ b/packages/wrapper/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@kastelll/wrapper",
-	"version": "0.1.7",
+	"version": "0.1.8",
 	"description": "This is a API & WS Wrapper for Kastel, Handles almost everything",
 	"license": "GPL-3.0-or-later",
 	"keywords": [],
@@ -22,7 +22,8 @@
 		"format": "prettier --write . && cross-env TIMING=1 eslint src --ext .mjs,.js,.ts --fix --format=pretty",
 		"lint": "prettier --check . && cross-env TIMING=1 eslint src --ext .mjs,.js,.ts --format=pretty",
 		"prepack": "yarn build && yarn lint",
-		"test": "vitest run"
+		"test": "vitest run",
+		"docs": "yarn run typeodc --out docs src"
 	},
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -53,6 +54,7 @@
 		"prettier": "^2.8.2",
 		"tsup": "^6.5.0",
 		"typedoc": "^0.24.8",
+		"typedoc-plugin-missing-exports": "^2.1.0",
 		"typescript": "^4.9.4",
 		"vitest": "^0.27.1"
 	},
