--- a/packages/wrapper/package.json
+++ b/packages/wrapper/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@kastelll/wrapper",
-	"version": "0.1.8",
+	"version": "0.1.9-beta.4",
 	"description": "This is a API & WS Wrapper for Kastel, Handles almost everything",
 	"license": "GPL-3.0-or-later",
 	"keywords": [],
@@ -52,7 +52,8 @@
 		"eslint-config-neon": "^0.1.40",
 		"eslint-formatter-pretty": "^4.1.0",
 		"prettier": "^2.8.2",
-		"tsup": "^6.5.0",
+		"svelte": "^4.2.1",
+		"tsup": "^7.2.0",
 		"typedoc": "^0.24.8",
 		"typedoc-plugin-missing-exports": "^2.1.0",
 		"typescript": "^4.9.4",
@@ -60,6 +61,7 @@
 	},
 	"dependencies": {
 		"events": "^3.3.0",
-		"pako": "^2.1.0"
+		"pako": "^2.1.0",
+		"recoil": "^0.7.7"
 	}
 }
