--- a/packages/wrapper/package.json
+++ b/packages/wrapper/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@kastelll/wrapper",
-	"version": "0.1.9-beta.4",
+	"version": "0.1.9-beta.6",
 	"description": "This is a API & WS Wrapper for Kastel, Handles almost everything",
 	"license": "GPL-3.0-or-later",
 	"keywords": [],
@@ -23,7 +23,7 @@
 		"lint": "prettier --check . && cross-env TIMING=1 eslint src --ext .mjs,.js,.ts --format=pretty",
 		"prepack": "yarn build && yarn lint",
 		"test": "vitest run",
-		"docs": "yarn run typeodc --out docs src"
+		"docs": "yarn typedoc --out docs src"
 	},
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -52,9 +52,8 @@
 		"eslint-config-neon": "^0.1.40",
 		"eslint-formatter-pretty": "^4.1.0",
 		"prettier": "^2.8.2",
-		"svelte": "^4.2.1",
 		"tsup": "^7.2.0",
-		"typedoc": "^0.24.8",
+		"typedoc": "^0.25.2",
 		"typedoc-plugin-missing-exports": "^2.1.0",
 		"typescript": "^4.9.4",
 		"vitest": "^0.27.1"
@@ -62,6 +61,6 @@
 	"dependencies": {
 		"events": "^3.3.0",
 		"pako": "^2.1.0",
-		"recoil": "^0.7.7"
+		"svelte": "^4.2.1"
 	}
 }
