--- a/packages/wrapper/.eslintrc.json
+++ b/packages/wrapper/.eslintrc.json
@@ -2,6 +2,7 @@
 	"extends": "../../.eslintrc.json",
 	"rules": {
 		"promise/prefer-await-to-then": "off",
-		"promise/prefer-await-to-callbacks": "off"
+		"promise/prefer-await-to-callbacks": "off",
+		"quotes": ["error", "single", { "avoidEscape": true }]
 	}
 }
